# strahlenschutz-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
.github/workflows/: deutschland_generator.yaml  openapi_check.yaml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/deutschland/strahlenschutz/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/strahlenschutz/api/: default_api.py
python-client/deutschland/strahlenschutz/model/: __init__.py  base_feature.py  base_schema.py  extended_feature.py  extended_feature_properties.py  extended_schema.py  geometry_point.py  normal_feature.py  normal_feature_properties.py  normal_schema.py
python-client/deutschland/strahlenschutz/models/: __init__.py
python-client/docs/: BaseFeature.md  BaseSchema.md  DefaultApi.md  ExtendedFeature.md  ExtendedFeatureProperties.md  ExtendedSchema.md  GeometryPoint.md  NormalFeature.md  NormalFeatureProperties.md  NormalSchema.md
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: modules.rst  strahlenschutz.model.rst
python-client/test/: test_base_feature.py  test_base_schema.py  test_default_api.py  test_extended_feature.py  test_extended_feature_properties.py  test_extended_schema.py  test_geometry_point.py  test_normal_feature.py  test_normal_feature_properties.py  test_normal_schema.py
