[tool]
[tool.poetry]
name = "de-strahlenschutz"
version = "1.0.0"
description = "ODL-Info API"
keywords = ["OpenAPI", "OpenAPI-Generator", "strahlenschutz", "App", "API"]
homepage = "https://github.com/bundesAPI/strahlenschutz-api"
authors = ["BundesAPI <kontakt@bund.dev>"]
packages = [
  { include = "deutschland"}
]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"
python-dateutil = "*"
urllib3 = ">=1.25.3"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bundesAPI/strahlenschutz-api/issues"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
pytest = "^6.2.4"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

